# AgenticAIProductSearch

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  agent_fixed.py  app.py  debug_search.py  ingest.py  pyproject.toml  query_engine.py  render.yaml  requirements.txt  setup.py  test_api_ingestion.py  test_local.py
data/: product_catalog.csv
vercel-deployment/: index.html
