[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product_catalog_query_engine"
version = "0.1.0"
description = "A product catalog query engine using OpenAI embeddings"
requires-python = ">=3.9"
dependencies = [
    "openai==1.3.0",
    "python-dotenv==1.0.0",
    "streamlit==1.24.0",
    "numpy",
    "pandas",
]
